was855-todo-app-migration/pipeline/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: todo
  name: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/demo-todo-was855/was855todoappearear:latest
          imagePullPolicy: Always
          name: todo
          ports:
            - containerPort: 9080
              protocol: TCP
