was855-todo-app-migration/pipeline/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todo
  name: todo
spec:
  type: NodePort
  ports:
    - name: http
      port: 9080
      targetPort: 9080
  selector:
    app: todo
