was855-todo-app-migration/pipeline/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: todo
  name: todo
spec:
  path:
    /
  port:
    targetPort: http
  to:
    kind: Service
    name: todo
    weight: 100
